--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -11,7 +11,12 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
     />
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{% static 'css/style.css' %}"
+    />
   </head>
   <body>
     <header class="navbar-fixed">
@@ -19,7 +24,9 @@
         <div class="nav-wrapper">
           <ul>
             <li>
-              <a href="/" class="left brand-logo">&nbsp;&nbsp;Finch Collector</a>
+              <a href="/" class="left brand-logo"
+                >&nbsp;&nbsp;Finch Collector</a
+              >
             </li>
           </ul>
           <ul class="right">
