--- a/main_app/templates/finches/detail.html
+++ b/main_app/templates/finches/detail.html
@@ -1,19 +1,93 @@
-{% extends 'base.html' %}
-{% block content %}
+{% extends 'base.html' %} {% block content %}
 
 <h1>Finch Details</h1>
 
-<div class="card">
-  <div class="card-content">
-    <span class="card-title">{{ finch.name }}</span>
-    <p>Scientific Name: {{ finch.scientific_name }}</p>
-    <p>Mass: {{ finch.mass }} cm</p>
-    <p>Length: {{ finch.length }} g</p>
+<div class="row">
+  <div class="col s6">
+    <div class="card">
+      <div class="card-content">
+        <span class="card-title">{{ finch.name }}</span>
+        <p>Scientific Name: {{ finch.scientific_name }}</p>
+        <p>Mass: {{ finch.mass }} cm</p>
+        <p>Length: {{ finch.length }} g</p>
+      </div>
+      <div class="card-action">
+        <a href="{% url 'update' finch.id %}">Edit</a>
+        <a href="{% url 'finch_delete' finch.id %}">Delete</a>
+      </div>
+    </div>
   </div>
-  <div class="card-action">
-    <a href="{% url 'update' finch.id %}">Edit</a>
-    <a href="{% url 'finch_delete' finch.id %}">Delete</a>
+  <div class="col s6">
+    <form method="post" action="{% url 'add_seen' finch.id%}">
+      {% csrf_token %} {{ seen_form.as_p }}
+      <input type="submit" class="btn" value="Add Seen" />
+    </form>
+    <table class="striped">
+      <thead>
+        <tr>
+          <th>Date</th>
+          <th>Meal</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for s in finch.last_set.all %}
+        <tr>
+          <td>{{s.date}}</td>
+          <td>{{s.get_time_display}}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
   </div>
 </div>
-
-{% endblock %}
+<hr />
+<div class="row">
+  <div class="col s6">
+    <h3>{{ finch.name }}'s Trees</h3>
+    {% if finch.trees.count %} {% for tree in finch.trees.all %}
+    <div class="card">
+      <div class="card-content">
+        <span class="card-title">
+          A <span>{{ tree.height }}m</span> {{ tree.name }}
+        </span>
+      </div>
+    </div>
+    {% endfor %} {% else %}
+    <h5>No Trees :(</h5>
+    {% endif %}
+  </div>
+  <div class="col s6">
+    <h3>Available Trees</h3>
+    {% if tree.count %}
+    {% for t in tree.all %}
+    <div class="card">
+      <div class="card-content">
+        <span class="card-title">
+          A {{ t.height }} m {{ t.name }}
+        </span>
+      </div>
+      <div class="card-action">
+        <form action="{% url 'assoc_tree' finch.id t.id%}" method="post">
+          {% csrf_token %}
+          <button type="submit" class="btn">Add</button>
+        </form>
+      </div>
+    </div>
+    {% endfor %}
+    {% else %}
+    <h5>{{finch.name}} Already Seen All Tree</h5>
+    {% endif %}
+  </div>
+  <script>
+    var dateEl = document.getElementById("id_date");
+    M.Datepicker.init(dateEl, {
+      format: "yyyy-mm-dd",
+      defaultDate: new Date(),
+      setDefaultDate: true,
+      autoClose: true,
+    });
+    var selectEl = document.getElementById("id_time");
+    M.FormSelect.init(selectEl);
+  </script>
+  {% endblock %}
+</div>
